refactored Path and further refactored BrowserActor